Fixed overlap between Quizzes title and toggleSwitch on small screens

--- a/src/components/buttons/ToggleSwitch.css
+++ b/src/components/buttons/ToggleSwitch.css
@@ -1,6 +1,6 @@
 .toggle-switch {
   position: fixed;
-  top: 10px;
+  top: 20px;
   right: 10px;
   z-index: 2;
   display: flex;
