--- a/src/pages/styles/Quizzes.css
+++ b/src/pages/styles/Quizzes.css
@@ -1,3 +1,5 @@
-.Quizzes {
-    
+@media (max-width: 500px) {
+    .Quizzes h1 {
+        padding-top: 30px;
+    }
 }
